# spack

lib/spack/spack/test/cmd/: pkg.py
lib/spack/spack/test/util/: package_hash.py
lib/spack/spack/util/: package_hash.py
lib/spack/spack/util/unparse/: unparser.py
share/spack/: spack-completion.bash
test_cmake/: CMakeLists.txt
